--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,50 @@
+aiohttp==3.9.0b0
+aiosignal==1.3.1
+attrs==23.2.0
 bcrypt==4.2.0
 blinker==1.8.2
+certifi==2024.7.4
 click==8.1.7
 colorama==0.4.6
+distlib==0.3.8
 dnspython==2.6.1
 email_validator==2.2.0
+et-xmlfile==1.1.0
+filelock==3.14.0
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+frozenlist==1.4.1
 greenlet==3.0.3
+grpcio==1.64.1
+grpcio-tools==1.64.1
+h5py==3.11.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+mat73==0.63
+multidict==6.0.5
+numpy==1.26.4
+openpyxl==3.1.4
+pandas==2.2.2
+peppercorn==0.6
+pipenv==2024.0.1
+platformdirs==4.2.2
+protobuf==5.27.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+sampleproject @ git+https://github.com/pypa/sampleproject.git@a1f00056ebc65d17ae69c5aba324ef4f0382138a
+scipy==1.13.1
+setuptools==70.0.0
+six==1.16.0
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
+tzdata==2024.1
+virtualenv==20.26.2
 Werkzeug==3.0.3
+wheel==0.43.0
 WTForms==3.1.2
+yarl==1.9.4
